JSAPI-3667: Features list bullets overflow fix

--- a/styles/style.less
+++ b/styles/style.less
@@ -406,8 +406,8 @@
         }
     .features__table-of-contents {
         overflow: hidden;
-        margin: -2px 0 25px 42px;
-        padding: 2px 0 1px;
+        margin: -2px 0 23px 41px;
+        padding: 2px 0 2px 2px;
         }
         .features__table-of-contents-item {
             position: relative;
